--- a/components/sass/_components.scss
+++ b/components/sass/_components.scss
@@ -1,486 +1,250 @@
+%reset {
+    margin: 0;
+    padding: 0;
+}
+
+%ellipsis {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 * {
     // -webkit-transition: margin 200ms linear;
     //    -moz-transition: margin 200ms linear;
     //         transition: margin 200ms linear;
+    @extend %reset;
     -webkit-tap-highlight-color: transparent;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
         -ms-text-size-adjust: 100%;
 }
 
-%reset {
-    margin: 0;
-    padding: 0;
-}
-
-p {
-    @include mobile {
-        font-size: 1.05rem;
-    }
-    @include tablet {
-        font-size: 1.2rem;
-    }
-}
-
-%projectComposition {
-    max-width: 800px;
-    margin: 40px auto;
-    @include clearfix;
-    img {
-        max-width: 370px;
-        @include mobile {
-            float: none;
-        }
-    }
-    p {
-        @include mobile {
-            float: none;
-            max-width: 100%;
-        }
-        @include desktop {
-            max-width: 370px;
-            padding-top: 0;
-        }
-    }
-}
+// ::-webkit-scrollbar { width: 3px; height: 3px;}
+// ::-webkit-scrollbar-button {  background-color: #666; }
+// ::-webkit-scrollbar-track {  background-color: #fff;}
+// ::-webkit-scrollbar-track-piece { background-color: #999;}
+// ::-webkit-scrollbar-thumb { height: 50px; background-color: #666; border-radius: 3px;}
+// ::-webkit-scrollbar-corner { background-color: #999;}
+// ::-webkit-resizer { background-color: #666;}
 
 html {
-    font-size: 16px;
-    line-height: 1.5;
-    font-weight: 400;
-    color: $color-main-light;
+    font-size: 14px;
     font-family: $font-main;
-    background-color: $color-background;
-    a {
-        text-decoration: none;
-        color: $white;
-    }
+    background-color: $bg-color-1;
+    color: #eee;
+    overflow: hidden;
 }
 
-.container {
-    @include mobile {
-        max-width: 100%;
-    }
-    @include desktop {
-        max-width: $container;
-    }
-    margin: 0 auto;
+a {
+    color: $white;
+    text-decoration: none;
 }
 
-// .noscript {
-//     @extend %box-shadow-1;
-//     @extend %absolute_left;
-// 	background-color: $pink;
-// 	color: $off-white;
-// 	text-align: center;
-// 	padding: 0;
-// 	font-weight: bold;
-// 	font-size: 1.2em;
-//     z-index: 11;
-//     width: 100vw;
-//     margin-top: $header-height;
-//     height: $header-height;
-//     line-height: $header-height;
-// }
+ul {
+    list-style-type: none;
+}
 
-nav {
-    @extend %reset;
-    position: fixed;
-    top: 0;
-    left: 0;
-    border: 0;
-    border-bottom: 1px solid $white;
-    width: 100%;
-    z-index: 100;
-    background-color: $color-nav;
+.tag {
+    margin: 0.3em 0.3em 0.2em 0;
+    border-radius: 13px;
+    height: 26px;
+    border: 2px solid $notes-tag-border;
+    color: $notes-tag-name;
+    background-color: transparent;
+    min-width: 50px;
+    width: auto;
+    text-align: center;
+    display: inline-block;
+    line-height: 1em;
+    font-size: 0.85rem;
     
-    ul {
-        width: 100%;
-        list-style-type: none;
-        @extend %reset; 
-        text-align: center;
-        li {
-            display: inline-block;
-            line-height: $nav-height;
-            height: $nav-height;
-            letter-spacing: 1px;
-            
-            @include mobile {
-                margin-right: 30px;
-                font-size: 0.9rem;
-            }
-            @include tablet {
-                margin-right: 70px;
-                font-size: 1.1rem;
-            }
-            &:last-child {
-                margin-right: 0;
-            }
-        }
-    }
-}
-
-header {
-    background-color: $color-header;
-    position: relative;
-    margin-top: $nav-height;
-    @include mobile {
-        height: 310px;
-    }
-    @include tablet {
-        height: 410px;
+    .selected {
+        border: 2px solid $notes-tag-border-selected; 
+        color: $notes-tag-name-selected;
     }
     
     span {
-        color: $white;
-        margin: 50px 22px 0;
-    }
-    
-    .name {
-        text-align: center;
-        width: 100%;
-        @extend %reset;
-        position: absolute;
-        top: 50%;
-        -ms-transform: translateY(-50%);
-        transform: translateY(-50%);
         display: inline-block;
-        svg {
-            width: 90%;
-            height: 9%;
-            max-width: 660px;
-            max-height: 66px;
-            display: inline-block;
-            
-        }
-        h1 {
-            color: $white;
-            font-weight: normal;
-            font-family: $font-main; 
-            margin: -20px auto 30px;  
-            @include mobile {
-                font-size: 2.8rem;
-                line-height: 2.5rem;
-            }
-            @include tablet {
-                font-size: 3.8rem;
-                line-height: 3.5rem;
-            }
-        }
-        h2 {
-            color: $white;
-            font-weight: normal;
-            font-family: $font-main;
-            letter-spacing: 2px;
-            text-transform: uppercase;
-            margin: 15px 20px -5px;
-            @include mobile {
-                font-size: 1.15rem;
-                line-height: 1.45rem;
-            }
-            @include tablet {
-                font-size: 1.5rem;
-                line-height: 1.35rem;
-            }
-        }
+        margin: 0.59em 1.42em 0;
     }
 }
 
-#project {
-    text-align: center;
-    .bordered {
-        box-shadow: 0 0 0 1px $light-grey,0 2px 0 1px $light-grey;
-    }
-    a {
-        color: $color-main;
-        text-decoration: underline;
-    }
-    h3 {
-        margin-top: 60px;
-        font-size: 2.1rem;
-        color: $black;
-        text-shadow: 0 2px #ddd;
-        width: 100%;
-    }
-    p {
-        margin: 0 auto;
-        max-width: 800px;
-        padding: 30px;
-        text-align: justify;
-    }
-    img {
-        margin: 5px auto 40px;
-        max-width: 700px;
-        width: 90%;
-        border-radius: 5px;
-    }
-    
-    .rightimg {
-        @extend %projectComposition;
-        img {
-            @include desktop {
-                float: right;
-            }
-        }
-        p {
-            @include desktop {
-                float: left;
-                padding-left: 0;
-            }
-        }
-    }
-    
-    .leftimg {
-        @extend %projectComposition;
-        img {
-            @include desktop {
-                float: left;
-            }
-        }
-        p {
-            @include desktop {
-                float: right;
-                padding-right: 0;
-            }
-        }
-    }
+%spacer {
+    border-bottom: 2px solid $notes-spacer;
 }
 
-#projects {
-    margin-bottom: 50px;
-    h3 {
-        text-align: center;
-        font-size: 2.1rem;
-        width: 100%;
-        display: inline-block;
-        margin-top: 80px;
-        margin-bottom: 60px;
-        color: $black;
-        text-shadow: 0 2px #ddd;
-    }
-    article {
-        vertical-align: top;
-        text-align: center;
-        display: inline-block;
-        
-        &:last-of-type {
-            @include clearfix;
-        }
-        
-        img {
-            background: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 0 1px $light-grey,0 2px 0 1px $light-grey;
-            overflow: hidden;
-            height: auto;
-            @include mobile {
-                width: 250px;
-            }
-            @include tablet {
-                width: 350px;
-            }
-        }
-        
-        h4 {
-            color: $dark-grey;
-            font-size: 25px;
-            font-size: 1.65rem;
-            margin: 11px auto;
-            padding-bottom: 10px;
-            border: 0;
-            border-bottom: 1px solid #ddd;
-            @include mobile {
-                width: 90%;
-            }
-            @include tablet {
-                width: 350px;
-            }
-        }
-        p {
-            color: $color-main-light;
-            line-height: 1.7rem;
+#notespanel {
+    width: 280px;
+    height: 100vh;
+    // overflow: hidden;
+    float: left;
+    
+    .header {
+        height: $nav-height;
+        background-color: $bg-color-2;
+        li {
+            float: left;
+            width: 70px;
+            height: $nav-height;
+            font-size: 24px;
             text-align: center;
-            margin: 20px auto;
-            a {
-                text-decoration: underline;
-                color: $color-main-light;
+            span {
+                color: #cdcdcf;
+                margin-top: 28px;
+                &:hover {
+                    color: $white;
+                }
             }
-            @include mobile {
-                width: 90%;
-                font-size: 1rem;
-            }
-            @include tablet {
-                width: 350px;
+            &.selected {
+                span {
+                    color: $white;
+                }
+                background-color: $bg-color-1;
             }
         }
+    }
+    
+    .newnote {
+        height: $new-note-height;
+        position: relative;
+        @extend %spacer;
+        .btn {
+            width: 200px;
+            border-radius: 5px;
+            background-color: $special-button;
+            color: $white;
+            padding: 15px;
+            text-align: center;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translateY(-50%) translateX(-50%);
+            cursor: pointer;
+        }
+    }
+    .body {
+        overflow-y: auto;
+        height: calc(100vh - #{$nav-height} - #{$new-note-height} - 2px);
         
-        .pill {
-            @extend %reset;
-            margin-bottom: 87px;
-            li {
-                display: inline-block;
-                padding: 5px 8px;
-                margin-right: 5px;
+        .note {
+            cursor: pointer;
+            min-height: 80px;
+            @extend %spacer;
+            padding: 14px;
+            margin: 0;
+            h3 {
+                font-size: 1.1rem;
                 margin-bottom: 5px;
-                border-radius: 3px;
-                background-color: $color-pill;
-                text-transform: uppercase;
-                font-size: 0.875em;
-                font-weight: 300;
-                letter-spacing: 1px;
-                color: white;
+                color: $notes-title;
+                font-weight: 500;
+                @extend %ellipsis;
+                padding-right: 12px;
+            }
+            p {
+                margin: 8px 0;
+                color: $notes-excerpt;
+                // @extend %ellipsis;
+                padding-right: 12px;
+            }
+            &.selected {
+                background-color: $bg-color-2;
+            }
+            ul {
+                max-height: 35px;
+                max-width: 250px;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                li {
+                    display: inline-block;
+                    z-index: -999999999;
+                }
             }
         }
+    }
+}
+
+#notesview {
+    height: 100vh;
+    min-width: calc(100% - 560px);
+    max-width: calc(100% - 560px);
+    width: auto;
+    width: auto;
+    background-color: $default-bg-preview-body;
+    float: left;
+    color: $default-preview-text-color;
+    .header {
+        height: $nav-height;
+        background-color: $default-bg-preview-header;
+        a {
+            font-size: 1.4rem;
+            color: #767676;
+            float: left;
+            width: 40px;
+            height: 70px;
+            padding-left: 20px;
+        }
+    }
+    .body {
+        font-size: 1.1rem;
+        overflow-y: auto;
         
-        @include mobile {
+        // textarea {
+        //     font-size: 1.12rem;
+        //     padding: 15px 56px;
+        //     -webkit-box-sizing: border-box;
+        //     -moz-box-sizing: border-box;
+        //     box-sizing: border-box;
+        //     width: 100%;
+        //     border: 0;
+        //     resize: none;
+        //     height: calc(100vh - #{$nav-height});
+        //     outline: none;
+        //     overflow: none;
+        //     box-shadow: none;
+        //     background-color: $white;
+        // }
+        input {
+            font-size: 1.55rem;
+            padding: 18px 56px 0;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
             width: 100%;
+            height: $input-title-height;
+            border: 0;
+            font-weight: 500;
+            outline: none;
+            overflow: none;
+            box-shadow: none;
+            background-color: $white;
         }
-        @include tablet {
-            width: 49%;
-        }
-        @include desktop {
-            width: 33%;
-        }
-        
-    }
-}
-
-#about, #contact {
-    padding: 30px;
-    color: $white;
-    background-color: $grey;
-    text-align: center;
-    
-    h3 {
-        font-size: 2.1rem;
-        text-shadow: 0 2px $black;
-        &:first-of-type {
-            margin-top: 80px;
-        }
-    }
-    p {
-        max-width: 620px;
-        margin: 10px auto 38px;
-        font-size: 1.25rem;
-    }
-    
-    img {
-        margin: 50px auto;
-    }
-    
-    dl {
-        max-width: 510px;
-        margin: 10px auto 38px;
-        font-size: 1.25rem;
-    }
-    
-    dt {
-        display: inline-block;
-        vertical-align: top;
-        text-align: left;
-        margin-left: 0;
-        font-weight: bold;
-        margin-bottom: 10px;
-        @include mobile {
+        .content {
+            font-size: 1.12rem;
+            padding: 14px 56px;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: border-box;
             width: 100%;
+            resize: none;
+            height: calc(100vh - #{$nav-height} - #{$input-title-height});
+            outline: none;
+            overflow: none;
+            box-shadow: none;
+            background-color: $white;
+            border: 0;
         }
-        @include tablet {
-            width: 90px;
-        }
-    }
-    dd {
-        display: inline-block;
-        text-align: left;
-        margin-bottom: 30px;
-        @include mobile {
-            width: 90%;
-        }
-        @include tablet {
-            width: 350px;
+        [contentEditable=true]:empty:before{
+            content: attr(data-text);
+            color: #b1a9a9;
         }
     }
-    a {
-        color: $white;
-        margin-bottom: 60px;
-        display: inline-block;
-        text-decoration: underline;
-    }
 }
 
-.button {
-    background-color: darken($grey, 16%);
-    border-radius: 5px;
-    color: $white !important;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 0 auto 70px;
-    &:hover {
-        background-color: $black;
-        color: $black;
-    }
-}
-
-.back {
-    a {
-        display: inline-block;
-        @include mobile {
-            font-size: 1.2rem;
-        }
-        @include tablet {
-            font-size: 1.5rem;
-        }
-    }
-    margin-bottom: 90px;
-}
-
-.clearfix {
-    @include clearfix;
-}
-
-footer {
-    height: 50px;
-    color: $white;
-    text-align: center;
-    background-color: $color-footer;
-    line-height: 50px;
-    border-top: 1px solid $white;
-    letter-spacing: 1px;
-    font-size: 0.9rem;
-}
-
-.name use {
-    opacity: 0;
-    animation: nameFadeIn 650ms forwards ease-in 100ms, nameUp 620ms forwards ease-out;
-    fill: $white;
-}
-
-// .dash {
-//     width: 0;
-//     animation: dashwide 300ms forwards linear 350ms;
-//     height: 6px;
-//     background-color: $white;
-//     display: block;
-//     margin: 15px auto 7px;
-            
-//     @include mobile {
-//         height: 5px;
-//     }
-//     @include tablet {
-//         height: 8px;
-//     }
-// }
-
-
-/*animation*/
-@keyframes nameFadeIn {
-    from { opacity: 0; }
-    to { opacity: 1; }
-}
-
-@keyframes nameUp {
-    from { transform: translateY(30%); }
-    to { transform: translateY(0%); }
+#notesinfo {
+    float: right;
+    width: 280px;
+    height: 100vh;
+    background-color: $bg-info-body;
 }
