--- a/components/sass/_variables.scss
+++ b/components/sass/_variables.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto+Mono:400,500);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600);
 
 $white:             #fff;
 
@@ -50,11 +51,15 @@ $default-bg-preview-body: $white;
 $default-preview-text-color: #212121;
 
 $nav-height:        70px;
+$nav-width:         70px;
 $new-note-height:   95px;
 $input-title-height: 58px;
+$notespanel-width:  $nav-width * 4;
+$notesinfo-width:  280px;
 
 $screen-small:  0;
 $screen-medium: 768px;
 $screen-large: 1300px;
 
-$font-main: "Roboto Mono", monospace;
+$font-main: "Source Sans Pro", Arial, sans-serif;
+$font-editor: "Roboto Mono", Courier, monospace;
